improvements layout + bug fix whitespace

--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -233,31 +233,46 @@ border-radius: 5px;
 }
 
 #menuBtn {
-  border-radius: 5px;
-  padding: 10px 10px;
   color: #f0f0f5;
-  background-color:#5ba0f0;
   cursor: pointer;
+  position: absolute;
+  right: 1em;
 }
 
-#menu {
-/*  position: absolute;*/
-  left: 0;
-  display: inline-block;
-/*  z-index: 1; */
+#menuBack {
+  padding-left: 5px;
+  padding-right: 5px;
+  cursor: pointer;
+  position: absolute;
+  right: 4em;
 }
 
 #menu-content {
   display: none;
   position: absolute;
+  right: 0;
   background-color: rgba(91, 160, 240, 0.8);
-  min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 12px 16px;
   border-radius: 5px;
   color: #f0f0f5;
   cursor: pointer;
   z-index: 1;
+}
+
+#menu {
+  border-radius: 5px;
+  color: #f0f0f5;
+  margin: 1% 3% 1%;
+  padding-top: 5px;
+  padding-bottom: 15px;
+  background-color: rgba(91, 160, 240, 0.8);
+  position: relative;
+}
+
+.menuDiv {
+  display: inline-block;
+  margin-bottom: 1em;
 }
 
 .items {
